--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ input[type=submit], input[type=button] {
     min-width: 960px;
     position: relative;
 
-    padding: 0 40px;
+    padding: 0 6%;
 
     text-align: left;
 }
@@ -43,7 +43,6 @@ input[type=submit], input[type=button] {
 #header > .container {
     text-align: center;
     height: 35px;
-    padding: 0 50px;
 }
 
 #header a {
